[PAIRONE-13] Upgrade to Java 17 (#20)
* [PAIRONE-13] Upgrade to Java 17

* [PAIRONE-13] Java 17 improvements

* [PAIRONE-13] CI

* [PAIRONE-13] Fix workflow

* [PAIRONE-13] hashCode

* [PAIRONE-13] Generated annotation

* [PAIRONE-13] Generated annotation part 2

* [PAIRONE-13] Use records and Generated annotation

* [PAIRONE-13] Repackaging

* [PAIRONE-13] Use records