@@ -5,11 +5,10 @@ import it.proconsole.utility.pairone.core.model.Developer;
 import it.proconsole.utility.pairone.core.model.Pair;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PairAdapter {
   public List<PairEntity> fromDomain(List<Pair> pairs, Long sprintId) {
-    return pairs.stream().map(it -> fromDomain(it, sprintId)).collect(Collectors.toList());
+    return pairs.stream().map(it -> fromDomain(it, sprintId)).toList();
   }
 
   private PairEntity fromDomain(Pair pair, Long sprintId) {
