@@ -9,7 +9,7 @@ import it.proconsole.utility.pairone.core.repository.DeveloperRepository;
 import it.proconsole.utility.pairone.core.repository.SprintRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class RoundRobinSprintsGenerator implements SprintsGenerator {
   private final DeveloperRepository developerRepository;
@@ -32,16 +32,16 @@ public class RoundRobinSprintsGenerator implements SprintsGenerator {
     var rounds = scheduler.scheduleFor(developers);
     var sprints = rounds.stream()
             .map(round -> new Sprint(round.id(), getPairsFor(round)))
-            .collect(Collectors.toList());
+            .toList();
     sprintRepository.deleteByTeamId(teamId);
     return sprintRepository.saveAll(teamId, sprints);
   }
 
   private List<Pair> getPairsFor(Round<Developer> round) {
     return round.matches().stream()
-            .map(match -> match.secondPlayer()
+            .map(match -> Optional.ofNullable(match.secondPlayer())
                     .map(it -> new Pair(List.of(match.firstPlayer(), it)))
                     .orElseGet(() -> new Pair(List.of(match.firstPlayer())))
-            ).collect(Collectors.toList());
+            ).toList();
   }
 }
